Fix block selection

BUG:229454

svn path=/trunk/KDE/kdelibs/kate/; revision=1099633